welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value nbCaseorange
while (2*nbBiscuit < nbCaseorange+1){
                     ^RunHalf:9: error: not found: value nbCaseorange
    nbCaseOrange=nbCaseorange+1;
                 ^